Ensure the standard drawer height is not too big.

--- a/scss/lexa.scss
+++ b/scss/lexa.scss
@@ -420,6 +420,10 @@ body.notloggedin {
     }
 }
 
+.drawerheader {
+    height: $navbar-first-row-height;
+}
+
 .drawer-primary .drawerheader {
     flex-flow: row-reverse nowrap;
     height: $navbar-second-row-height;
